0.4.0
New feature: GLString
New feature: StbImg
Changed: *Size -> *Dim
Changed: Split `AtlasLoom` into `-AWT` and `-STB`
Fixed a bug: IMesh#texDim is 3

0.3.0
New feature: Developers can load texture by int array
New feature: Developers can generate sprite by `AtlasLoom`
New feature: `GlProgram#vertexAttribPointer`
Fixed a fatal bug: Program crashed when creating shaders
    Exception in thread "main" java.lang.RuntimeException: Error compiling shader src: No errors.\\0
    	at org.overrun.glutils.GlProgram.createShader(GlProgram.java:84)

0.2.0
Fixed a bug: Program crashed when loading texture by `Textures.loadFS`
Fixed a bug: Expect ARGB but return ABGR when loading texture by `Textures.loadAWT`
New feature: Developers can load texture by ByteBuffer
New feature: `Mesh` for OpenGL 2 and `Mesh3` for OpenGL 3
New feature: Developers can and MUST close `Textures` before terminating
New feature: interface for `ThrowableCallback`
Changed: Program will not throw an exception when attrib not found (`GlProgram#getAttrib`)

0.1.0
org.overrun.glutils
    .callback
        + ErrorCallback
        + WarningCallback
    + GlProgram
    + GLUtils
    + ShaderReader
    + ShaderType
    + Textures